--- a/src/components/LessonsSection/LessonsSection.module.css
+++ b/src/components/LessonsSection/LessonsSection.module.css
@@ -12,7 +12,7 @@
 }
 
 .lesTitle {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 32px;
   color: #000;
   text-align: center;
