--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -12,7 +12,7 @@
   margin-bottom: 17px;
 }
 .projectTitle {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 32px;
   color: #000;
   text-align: center;
